# AgentOps-Lite

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  REFACTOR.md  SECURITY.md  action.yml  groundguard.example.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  extractor_request.yml  feature_request.md  feature_request.yml  integration_request.yml  real_world_failure.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
assets/brand/: README.md
benchmarks/: README.md  __init__.py  fact_gate_benchmark.py  realistic_cases.jsonl
docs/: benchmark.md  cli.md  comparisons.md  concepts.md  getting-started.md  good-first-issues.md  index.md  integrations.md  limitations.md  production.md  publishing.md  recipes.md  release-notes-draft.md
docs/launch/: README.md  benchmark-card.md  flow-card.md  social-posts.md
docs/releases/: v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.2.0.md  v0.2.1.md  v0.2.2.md
examples/: __init__.py
examples/decorator_demo/: __init__.py  run.py
examples/deepeval_groundguard/: README.md  __init__.py  run.py
examples/financial_report_demo/: README.md  __init__.py  run.py
examples/langgraph_node/: __init__.py  run.py
examples/openai_demo/: __init__.py  run.py
examples/promptfoo_groundguard/: README.md  __init__.py  promptfooconfig.yaml  run.py
groundguard/: __init__.py  server.py
groundguard/adapters/: __init__.py  langchain_callback.py  openai_wrapper.py
groundguard/checkers/: __init__.py  freshness.py  orphan.py
groundguard/cli/: __init__.py  demo.py  init.py  report.py
groundguard/core/: __init__.py  checker.py  config.py  coverage.py  ledger.py  matcher.py  models.py  output_claim_extractor.py  policy.py  tool_call.py  units.py
groundguard/generate/: __init__.py  (+1 more)
scripts/: render_demo_gif.ps1
tests/: test_adapters.py  test_benchmark.py  test_checker_extension.py  test_clean_synthetic_checkers.py  test_cli_demo.py  test_cli_init.py  test_cli_report.py  test_config.py  test_coverage_policy.py  test_examples.py  test_extraction_transparency.py  test_extractor_packs_and_exporters.py  test_extractor_registry.py  test_fact_gate_runtime.py  test_financial_report_demo.py  test_freshness_checker.py  test_grounded_generate.py  test_integrations.py  test_launch_materials.py  test_ledger.py  test_ledger_indexing.py  test_matcher.py  test_models.py  test_orphan_checker.py  test_output_claim_extractor.py  test_policy_actions.py  test_policy_repair_reask.py  test_realistic_dataset.py  test_release_metadata.py  test_report_renderers.py  test_schema_contracts.py  test_source_hygiene.py  test_tool_call.py
(+31 files in other folders)
