[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundguard"
version = "0.1.3"
description = "A local-first fact gate for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "GroundGuard contributors" },
]
keywords = ["ai", "agents", "fact-checking", "llm", "testing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
groundguard-report = "groundguard.cli.report:cli"

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
openai = [
  "openai>=1",
]

[tool.setuptools.packages.find]
include = ["groundguard*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
