[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groundguard-ai"
version = "0.2.3"
description = "A local-first fact gate for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "GroundGuard contributors" },
]
keywords = ["ai", "agents", "fact-checking", "llm", "testing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/chasen2041maker/GroundGuard"
Documentation = "https://chasen2041maker.github.io/GroundGuard/"
Repository = "https://github.com/chasen2041maker/GroundGuard"
Issues = "https://github.com/chasen2041maker/GroundGuard/issues"
Changelog = "https://github.com/chasen2041maker/GroundGuard/blob/main/CHANGELOG.md"

[project.scripts]
groundguard-benchmark = "benchmarks.fact_gate_benchmark:main"
groundguard-demo = "groundguard.cli.demo:cli"
groundguard-report = "groundguard.cli.report:cli"

[project.optional-dependencies]
dev = [
  "build>=1",
  "pytest>=7",
  "twine>=5",
]
openai = [
  "openai>=1",
]
docs = [
  "mkdocs-material>=9",
]

[tool.setuptools.packages.find]
include = ["groundguard*", "benchmarks*"]

[tool.setuptools.package-data]
groundguard = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
